@@ -5,6 +5,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.*;
 import org.springframework.web.filter.CorsFilter;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author bik
@@ -15,14 +16,15 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        // 开发时可以允许所有 origin，调通后改为具体 origin
         config.addAllowedOriginPattern("http://localhost:3000");
         config.addAllowedOriginPattern("http://127.0.0.1:3000");
+        config.addAllowedOriginPattern("http://localhost:5173");
+        config.addAllowedOriginPattern("http://127.0.0.1:5173");
         // 如果你愿意临时放开所有 origin（调试用），用下面一行代替上面两行：
         // config.addAllowedOriginPattern("*");
         config.addAllowedHeader("*");
         config.addAllowedMethod("*");
-        config.setExposedHeaders(Arrays.asList("token"));
+        config.setExposedHeaders(List.of("token"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
